# payne

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  python-package.yml  run-tests.yml
doc/: changelog.md  notes.md  testing.md  todo.md
scripts/: build-test-data.py
src/payne/: __init__.py  app.py  cli.py  config.py  download.py  installer.py  payne.py  project.py  uv.py
src/payne/app/: __init__.py  app.py  app_version.py  app_version_metadata.py  apps_dir.py
src/payne/downloader/: downloader.py
src/payne/exceptions/: __init__.py  app_version_already_installed.py  frontend_not_recognized.py
src/payne/installer/: __init__.py  installer.py  uv_installer.py
src/payne/package/: __init__.py  package.py
src/payne/project/: __init__.py  dist_metadata.py  metadata.py  project.py  pyproject.py
src/payne/project/build_frontend/: __init__.py  frontend.py  uv_frontend.py
src/payne/util/: file_system.py  path.py
test_data/bar-1.2.0/: pyproject.toml
test_data/bar-1.2.0/src/bar/: __init__.py
test_data/bar-1.2.1/: pyproject.toml
test_data/bar-1.2.1/src/bar/: __init__.py
test_data/baz-1.1.0/: pyproject.toml
test_data/baz-1.1.0/src/baz/: __init__.py
test_data/baz-1.1.1/: pyproject.toml
test_data/baz-1.1.1/src/baz/: __init__.py
test_data/baz/1.0/: pyproject.toml
test_data/baz/1.0/src/baz/: __init__.py
test_data/baz/1.1/: pyproject.toml
test_data/baz/1.1/src/baz/: __init__.py
test_data/dep-4.1.0/: pyproject.toml
test_data/dep-4.1.0/src/dep/: __init__.py
test_data/dep-4.1.1/: pyproject.toml
test_data/dep-4.1.1/src/dep/: __init__.py
test_data/dyn-3.1.0/: pyproject.toml
test_data/dyn-3.1.0/src/dyn/: __init__.py
test_data/foo-1.3.0/: pyproject.toml
test_data/foo-1.3.0/src/foo/: __init__.py
test_data/foo-1.3.1/: pyproject.toml
test_data/foo-1.3.1/src/foo/: __init__.py
test_data/foo-1.3.2/: pyproject.toml
test_data/foo-1.3.2/src/foo/: __init__.py
test_data/sup-2.1.0/: setup.py
test_data/sup-2.1.0/sup/: __init__.py
tests/: common.py  dirs.py  expected_output.py  test_config.py  test_download.py  test_payne.py  test_payne_local.py  test_pyproject.py  test_test_data.py  util.py  utils.py
tests/app/: test_app_version_metadata.py
tests/downloader/: test_downloader.py
tests/fixtures/: index_server.py
tests/package/: test_package.py
tests/project/: test_project.py  test_pyproject.py
tests/util/: test_file_system.py
