[project]
name = "payne"
version = "0.2.0"
description = "Install Python applications"
readme = "README.md"
authors = [
    { name = "Martin Herrmann", email = "martin@famherrmann.de" }
]
requires-python = ">=3.11"
dependencies = [
    "build[uv]>=1.2.2.post1",
    "cyclopts>=3.3.1",
    "unearth>=0.17.2",
]

[project.scripts]
payne = "payne.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv*",
]

[tool.pytest.ini_options]
markers = [
    "test_data: tests related to the test data",
]
pythonpath = "tests"
