[project]
name = "payne"
version = "0.2.0"
description = "Install Python applications"
readme = "README.md"
authors = [
    { name = "Martin Herrmann", email = "martin@famherrmann.de" }
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.1.0",
    "build[uv]>=1.2.2.post1",
    "cattrs>=24.1.2",
    "cyclopts>=3.3.1",
    "unearth>=0.17.2",
]
keywords = ["python", "application", "install", "package", "project", "dependencies", "isolation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
homepage = "https://github.com/deffi/payne"
source = "https://github.com/deffi/payne"
download = "https://github.com/deffi/payne/releases"
changelog = "https://github.com/deffi/payne/blob/main/doc/changelog.md"
releasenotes = "https://github.com/deffi/payne/releases"
#documentation = ""
issues = "https://github.com/deffi/payne/issues"
repository = "https://github.com/deffi/payne.git"

[project.scripts]
payne = "payne.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv*",
]

[tool.pytest.ini_options]
markers = [
    "test_data: tests related to the test data",
    "slow: tests than take significant time",
]
pythonpath = "tests"
