[project]
name = "bar"
version = "1.2.0"
requires-python = ">=3.12"
dependencies = [
    "baz",
]

[project.scripts]
bar = "bar:hello_bar"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
baz = { index = "payne_test_data" }

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv*",
]
