[project]
name = "dyn"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.scripts]
dyn = "dyn:hello_dyn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv*",
]

[tool.hatch.version]
path = "src/dyn/__init__.py"
