[project]
name = "foo"
version = "1.3.1"
requires-python = ">=3.12"
dependencies = [
    "bar==1.2.0",
]

[project.scripts]
foo = "foo:hello_foo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
bar = { index = "payne_test_data" }

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv*",
]
